# dev-journal

./: CMakeLists.txt  make.sh
script_tool/: run.sh
src/: a.c  main.cpp
src/main/: CMakeLists.txt  file_manager.h  main.cpp
